Use symbols in POM

--- a/simple-ejb-api/project-app/pom.xml
+++ b/simple-ejb-api/project-app/pom.xml
@@ -29,7 +29,7 @@
         <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>mai.linh</groupId>
+      <groupId>${project.groupId}</groupId>
       <artifactId>project-api</artifactId>
       <version>${project.version}</version>
     </dependency>    
