--- a/jsf-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/jsf-webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,11 @@
         <param-value>Development</param-value>
     </context-param>
   
+    <context-param>
+        <param-name>PROJECT_NAME</param-name>
+        <param-value>CRUD with JSF</param-value>
+    </context-param>
+
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -21,14 +26,8 @@
       <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
 
-    <!-- <filter>
-        <filter-name>RequestLoggingFilter</filter-name>
-        <filter-class>com.example.webapp.filter.ServletFilter</filter-class>
-    </filter> -->
-
-    <!-- <filter-mapping>
-        <filter-name>RequestLoggingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-    </filter-mapping> -->
+    <error-page>
+        <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+        <location>expired.xhtml</location>
+    </error-page>
 </web-app>
