--- a/simple-ejb-api/project-app/pom.xml
+++ b/simple-ejb-api/project-app/pom.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
- 
+  
   <groupId>mai.linh</groupId>
-  <artifactId>project-logic</artifactId>
+  <artifactId>project-app</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <name>project-logic</name>
+  <name>project-app</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -19,23 +18,22 @@
 
   <dependencies>
     <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-api</artifactId>
+        <version>7.0</version>
+        <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>project-api</artifactId>
+      <version>${project.version}</version>
+    </dependency>    
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.13.1</version>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>javax</groupId>
-      <artifactId>javaee-api</artifactId>
-      <version>7.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>mai.linh</groupId>
-      <artifactId>project-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
-      <scope>provided</scope>
-    </dependency> 
   </dependencies>
 
   <build>
@@ -63,8 +61,21 @@
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
           <configuration>
-            <finalName>${project.name}</finalName>
-          </configuration>
+            <!-- <finalName>${project.name}</finalName> -->
+            <archive>
+              <index>true</index>
+              <manifest>
+                <mainClass>mai.linh.project.standalone.App</mainClass> 
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries> 
+                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>                  
+              </manifest>
+              <manifestEntries>
+                <mode>development</mode>
+                <url>${project.url}</url>
+                <key>value</key>
+              </manifestEntries>
+              </archive>
+            </configuration>          
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
