--- a/project-ear/pom.xml
+++ b/project-ear/pom.xml
@@ -6,6 +6,25 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>project</name>
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <configuration>
+            <release>11</release>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-ear-plugin</artifactId>
+          <version>3.2.0</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <modules>  
     <module>project-entities</module>
     <module>project-server</module>
